# jarvis99

./: .architecture-linter.local.toml  .architecture-linter.toml  .coderabbit.yaml  .dgv.toml  .env.example  .gitignore  AGENTS.md  GSD-STYLE.md  JARVIS_EXECUTIVE_DASHBOARD.md  PHASE19_M0_REPORT.md  PHASE19_M5_5_1_A_REPORT.md  PHASE19_M5_5_1_B_REPORT.md  PHASE19_M5_5_1_D_REPORT.md  PROJECT_RULES.md  audit_report.json  config.yaml.example  jarvis_dev.db  pyproject.toml  run.py  verify_e2e_pipeline.py
.ai/: ACTION_LOG.md  AGENT_STATE.md  BUILD_CACHE.md  BUILD_SESSION.md  CHANGESET.md  CHECKPOINT.md  CONTEXT_INDEX.md  CURRENT_TASK.md  DEPENDENCY_SCOPE.md  FREEZE_LEDGER.md  HANDOFF.md  IMPACT_GRAPH.md  LOCKS.md  NEXT_ACTION.md  PROJECT_STATE.md  QUALITY_STATUS.md  RESUME_STATE.md  TASK_QUEUE.md
.antigravity/: ENGINEERING_CONSTITUTION.md  GOVERNANCE_RULES.md  SYSTEM_CONSTITUTION.md
.audit/: CLEANUP_REPORT.md  GATE_11_RUNTIME_STARTUP.md  PHASE_A_REPORT.md
.gemini/: GEMINI.md
.venv-py310/: pyvenv.cfg
adapters/: GEMINI.md
api/: .gitkeep  __init__.py  broadcaster.py  dependencies.py  dto.py  main.py  middleware.py  stream_service.py
archive/: README.md
audit/: __init__.py  architecture_audit.py  authority_audit.py  base.py  cli.py  documentation_audit.py  quality_audit.py  report.py  repository_audit.py
browser/: .gitkeep
core/: __init__.py  config.py  container.py  exceptions.py  health.py  interfaces.py  kernel.py  lifecycle.py  logger.py  metrics.py  registry.py  version.py
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
desktop/: .gitkeep
(+681 files in other folders)
