[project]
name = "jarvis-os"
version = "0.1.0"
description = "JARVIS OS - An Autonomous AI Employee Operating System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "greenlet>=3.5.3",
    "pgvector>=0.4.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "redis>=5.0.4",
    "sqlalchemy>=2.0.51",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12.20240311",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313', 'py314']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv"]

[[tool.mypy.overrides]]
module = "core.*"
ignore_errors = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
